# src/modules/doctors/useCases/showDoctorProfile/ShowDoctorProfileController.ts
@@ -5,13 +5,13 @@ import { ShowDoctorProfileUseCase } from "./ShowDoctorProfileUseCase";
 
 class ShowDoctorProfileController {
   async handle(request: Request, response: Response): Promise<Response> {
-    const { user_id } = request.params;
+    const { doctor_id } = request.params;
 
     const showDoctorProfileUseCase = container.resolve(
       ShowDoctorProfileUseCase
     );
 
-    const doctor = await showDoctorProfileUseCase.execute(user_id);
+    const doctor = await showDoctorProfileUseCase.execute(doctor_id);
 
     return response.json(doctor);
   }
