# src/shared/infra/http/routes/doctors.routes.ts
@@ -18,7 +18,7 @@ doctorsRoutes.post(
   verifyCRM,
   createDcotorController.handle
 );
-doctorsRoutes.get("/:user_id", showDoctorProfileController.handle);
+doctorsRoutes.get("/:doctor_id", showDoctorProfileController.handle);
 doctorsRoutes.get("/", listDoctorsController.handle);
 
 export { doctorsRoutes };
